--- a/ProductivityHub-FE/angular.json
+++ b/ProductivityHub-FE/angular.json
@@ -58,6 +58,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 8080
+          },
           "configurations": {
             "production": {
               "buildTarget": "ProductivityHub-FE:build:production"
