Ajustes de CORS para funcionar na Web

--- a/ProductivityHub-BE/pom.xml
+++ b/ProductivityHub-BE/pom.xml
@@ -109,6 +109,8 @@
 
 	<build>
 		<plugins>
+
+			<!-- Plugin Spring Boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
